# receiver/app.py
@@ -102,6 +102,10 @@ def environmental_reading(body):
     return NoContent, 201
 
 
+def get_health():
+    return NoContent, 200
+
+
 app = connexion.FlaskApp(__name__, specification_dir='')
 app.add_api("openapi.yml", base_path="/receiver", strict_validation=True, validate_responses=True)
 
