# receiver/openapi.yml
@@ -46,6 +46,17 @@ paths:
             schema:
               $ref: '#/components/schemas/EnvironmentalReading'
         description: Reading item to add
+
+  /health:
+    get:
+      tags:
+        - health
+      summary: checks health of backend services
+      operationId: app.get_health
+      description: Gets health of backend services
+      responses:
+        '200':
+          description: Successfully returned health check of backend services
         
 components:
   schemas:
